actions: fix: fix CONFIG_KSU_MODULE
refer: kernelsu_action

Signed-off-by: dabao1955 <dabao1955@163.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,11 +26,31 @@ jobs:
     - name: Check yaml
       run: cd tests && node index.js
 
+  sh-check:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        lint: [shellcheck, shfmt]
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install Packages
+        run: sudo apt update && sudo apt install -y ${{ matrix.lint }}
+      - name: lint
+        run: |
+          if [ ${{ matrix.lint }} = "shfmt" ]; then
+              shfmt -w -i 2 build.sh
+          else
+              ${{ matrix.lint }} build.sh
+          fi
+
   ci-test:
     strategy:
       fail-fast: false
     needs:
       - yaml-check
+      - sh-check
     runs-on: ubuntu-latest
     permissions:
       contents: write
