--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,7 +70,7 @@ jobs:
           ksu-version: main
           ksu-lkm: true
           android-version: 12.1
-          aosp-clang-version: r383902
+          aosp-clang-version: clang-r383902
           python-27: true
           disable-lto: true
           overlayfs: true
